Add dump + restoration db in docker-compose

--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-#If you change a value of its variables think about rebuilding the application
+#If you change a value of its variables think about rebuilding the application (docker-compose up -d --build)
 #Project
 # COMPOSE_PROJECT_NAME="app_meteo"
 WORKINGDIR="/app"
@@ -14,3 +14,4 @@ DB_CONTAINER_NAME="database"
 DB_USERNAME="admin"
 DB_PASSWORD="admin"
 DB_DATABASE_NAME="db_meteo"
+DUMP="dump_meteo_database.sql"
