Add react front

--- a/.env
+++ b/.env
@@ -4,6 +4,10 @@
 WORKINGDIR="/app"
 API_KEY="43ab6049c9dc3dfc09c22317ab41119d"
 
+#Front
+FRONT_CONTAINER_NAME="react"
+FORWARD_FRONT_PORT="80"
+
 #nestjs
 APP_CONTAINER_NAME="nestjs"
 FORWARD_APP_PORT="3000"
