--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -23,6 +23,27 @@ services:
     networks:
       - app_meteo_network
 
+  react:
+    container_name: ${FRONT_CONTAINER_NAME:-react}
+    build: 
+      context: ./Docker
+      dockerfile: Dockerfile
+      args:
+        MAIL: 'demo@demo.fr'
+        NAME: 'demo demo'
+        WORKINGDIR: ${WORKINGDIR:-/app}
+        CURRENT_PATH: ${PWD}
+    image: react
+    ports:
+      - ${FORWARD_FRONT_PORT:-80}:${FORWARD_FRONT_PORT:-80}
+    command: tail -f /dev/null
+    restart: unless-stopped
+    volumes:
+      - ./front:/app
+      - ./Docker/env_react:/app/.env
+    networks:
+      - app_meteo_network
+
   database_postgres:
     container_name: ${DB_CONTAINER_NAME:-database}
     build: 
