Change methode to env

--- a/.env
+++ b/.env
@@ -6,7 +6,8 @@ API_KEY="43ab6049c9dc3dfc09c22317ab41119d"
 
 #Front
 FRONT_CONTAINER_NAME="react"
-FORWARD_FRONT_PORT="80"
+FORWARD_FRONT_PORT="8000"
+PORT=${FORWARD_FRONT_PORT}
 
 #nestjs
 APP_CONTAINER_NAME="nestjs"
